# auto-subtitle

./: .gitignore  NOTICE  README.md  SubForge.bat  gui.py  pyproject.toml  requirements-experimental.txt  requirements.txt  setup.bat  setup.py  setup.sh  tmp_translate_input.txt
.github/workflows/: ci.yml
dev/prompts/: pr1_extract_shared_stage_models_plan.md  pr2_cjk_shared_pipeline_preplan.md  pr2_cjk_staged_pipeline_plan.md
dev/prompts/draft/: cjk_pipeline_rewrite_preplans.md
dev/roadmap/: cjk_pipeline_rewrite_preplans.md  revised_shared_transcript_first_pipeline_plan.md  subforge_product_roadmap.md
dev/standards/: typing.md
scripts/: setup.bat  setup.sh
src/subforge/: __main__.py  config.py  main.py  utils.py
src/subforge/nlp/: alignment.py  (+8 more)
tests/: conftest.py  test_alignment.py  test_audio_preprocess.py  test_chinese_benchmark.py  test_cjk_boundaries.py  test_cjk_pipeline.py  test_cjk_postprocess.py  test_downloader.py  test_english_staged.py  test_gemini_translator.py  test_lang_profile.py  test_metadata.py  test_nemo_transcriber.py  test_stage_models.py  test_staged_runner.py  test_subtitle.py  test_text_semantically.py  test_translation.py
tests/data/: news_refined.json  news_word_segments.json
youtube_subtitle_app/: __init__.py  config.py  main.py  test.py  utils.py
youtube_subtitle_app/audio/: preprocess.py
youtube_subtitle_app/downloader/: youtube.py
youtube_subtitle_app/nlp/: alignment.py  segmentation.py  text_semantically.py
youtube_subtitle_app/pipeline/: processor.py
youtube_subtitle_app/subtitle/: writer.py
youtube_subtitle_app/transcription/: faster_whisper_transcriber.py  nemo_transcriber.py
youtube_subtitle_app/translation/: translator.py
youtube_subtitle_app/ui/: main_window.py
(+46 files in other folders)
