[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subforge"
version = "0.1.0"
description = "Generate clean, accurate subtitles from YouTube videos."
authors = [{name = "Greysuki"}]
requires-python = ">=3.11"
dependencies = [
    "spacy",
]

[project.optional-dependencies]
full = [
    "faster-whisper",
    "PySide6-Essentials",
    "demucs",
    "yt-dlp",
]
gemini = ["google-genai>=1.0", "python-dotenv>=1.0"]
dev = ["pytest", "ruff"]

[project.scripts]
subforge = "subforge.ui.main_window:run"
subforge-cli = "subforge.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = ["slow: tests that download from network"]
addopts = "-m 'not slow'"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["F", "E"]
ignore = ["E402", "E501"]

[tool.black]
line-length = 88
target-version = ["py311"]
